--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -25,7 +25,7 @@
       <ul>
         {{ range .Paginator.Pages }}
         <li class="col-12 d-flex width-full py-4 border-bottom color-border-secondary public source">
-          <div class="col-10 col-lg-9 d-inline-block">
+          <div class="col-12 d-inline-block">
             <div class="d-inline-block mb-1">
               <h3 class="wb-break-all">
                 <a href="{{ .Permalink }}">{{ .Title }}</a>
@@ -33,11 +33,10 @@
             </div>
 
             <div>
-              <div class="col-9 d-inline-block text-gray mb-2 pr-4">
+              <div class="col-12 d-inline-block text-gray mb-2 pr-4">
                 {{ .Summary | safeHTML }}
               </div>
             </div>
-
 
             <div class="f6 text-gray mt-2">
               {{ with .Params.tags }}
