add code syntax

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href='{{ "css/github-style.css" | absURL }}' />
     <link rel="stylesheet" href='{{ "css/light.css" | absURL }}' />
     <link rel="stylesheet" href='{{ "css/dark.css" | absURL }}' />
+    <link rel="stylesheet" href='{{ "css/syntax.css" | absURL }}' />
     <title>{{ if .IsHome }}{{ else }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
     <link rel="icon" type="image/x-icon" href='{{ "images/favicon.ico" | absURL }}'>
     <meta name="theme-color" content="#1e2327">
