--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href='{{ "css/dark.css" | absURL }}' />
     <link rel="stylesheet" href='{{ "css/syntax.css" | absURL }}' />
     <title>{{ if .IsHome }}{{ else }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
+    {{ if .Site.Params.favicon }}
+    <link rel="icon" type="image/x-icon" href='{{ .Site.Params.favicon  }}'>
+    {{ else }}
     <link rel="icon" type="image/x-icon" href='{{ "images/favicon.ico" | absURL }}'>
+    {{ end }}
     <meta name="theme-color" content="#1e2327">
 
     <!-- Extended head section-->
