--- a/layouts/partials/menus.html
+++ b/layouts/partials/menus.html
@@ -20,7 +20,7 @@
               Overview
             </a>
             <a class="UnderlineNav-item {{ if .IsSection }} selected {{ end }}{{ if eq .Type "tags" }} selected {{ end }}"
-              href="/post/">
+              href="post/">
               <svg class="octicon octicon-repo UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16"
                 version="1.1" width="16">
                 <path fill-rule="evenodd"
