--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -8,7 +8,7 @@
               <div class="d-none d-md-block">
                 <a class="avatar mr-2 flex-shrink-0" href="{{ .Site.BaseURL }}">
                   <img class=" avatar-user"
-                    src="{{ with $.Site.Params.avatar }}{{ $.Site.Params.avatar }}{{ else }}{{ "images/avatar.png" | absURL }}{{ end }}"
+                    src="{{ with $.Site.Params.avatar }}{{ $.Site.Params.avatar }}{{ else }}{{ "images/avatar.gif" | absURL }}{{ end }}"
                     width="32" height="32"></a>
               </div>
               <div class="d-flex flex-column">
