--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -10,7 +10,8 @@
           for <strong>{{ .Params.title }}</strong>
         </div>
         <div class="TableObject-item text-right v-align-top">
-          <a class="issues-reset-query text-normal d-inline-block ml-3" href="{{ .Site.BaseURL }}/post/">
+          <!--<a class="issues-reset-query text-normal d-inline-block ml-3" href="{{ .Site.BaseURL }}/posts/">-->
+          <a class="issues-reset-query text-normal d-inline-block ml-3" href="./posts/"></a>
             <svg class="octicon octicon-x issues-reset-query-icon mt-1" viewBox="0 0 16 16" version="1.1" width="16"
               height="16">
               <path fill-rule="evenodd"
