--- a/layouts/partials/menus.html
+++ b/layouts/partials/menus.html
@@ -19,7 +19,8 @@
               </svg>
               Overview
             </a>
-            <a class="UnderlineNav-item {{ if .IsSection }} selected {{ end }}{{ if eq .Type " tags" }} selected {{ end }}" href="{{ .Site.BaseURL }}/posts/">
+            <!--<a class="UnderlineNav-item {{ if .IsSection }} selected {{ end }}{{ if eq .Type " tags" }} selected {{ end }}" href="{{.Site.BaseURL}}/posts/">-->
+              <a class="UnderlineNav-item {{ if .IsSection }} selected {{ end }}{{ if eq .Type " tags" }} selected {{ end }}" href="./posts/">
               <svg class="octicon octicon-repo UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16"
                 version="1.1" width="16">
                 <path fill-rule="evenodd"
