--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,5 +17,6 @@
     <meta name="theme-color" content="#1e2327">
 
     <!-- Extended head section-->
+	{{ partial "mathjx.html" . }}
     {{ partial "extended_head.html" . }}
 </head>
