--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -11,7 +11,7 @@
 
 {{ if or .Params.MathJax .Site.Params.MathJax}}
 <script type="text/javascript" async
-  src="https://cdn.bootcss.com/mathjax/2.7.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
     MathJax.Hub.Config({
       tex2jax: {
         inlineMath: [['$', '$'], ['\\(', '\\)']],
