--- a/layouts/partials/mathjx.html
+++ b/layouts/partials/mathjx.html
@@ -2,6 +2,7 @@
         async
         src="https://cdn.bootcss.com/mathjax/2.7.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 		<!--https://cdn.bootcdn.net/ajax/libs/mathjax/3.2.2/es5/tex-svg.min.js-->
+		<!--已🈲用，故不写cdn部分呢-->
 MathJax.Hub.Config({
   tex2jax: {
     inlineMath: [['$','$'], ['\\(','\\)']],
