--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -28,7 +28,7 @@
         {{end}}
       {{ end }}
       <ul>
-        {{ range .Paginator.Pages }}
+        {{ range (.Paginator 6).Pages }}
         <li class="col-12 d-flex width-full py-4 border-bottom color-border-secondary public source">
           <div class="col-12 d-inline-block">
             <div class="d-inline-block mb-1">
