--- a/static/css/github-style.css
+++ b/static/css/github-style.css
@@ -16,8 +16,8 @@ div.UnderlineNav {
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
-  padding-left: 32px!important;
-  padding-right: 32px!important;
+  padding-left: 32px !important;
+  padding-right: 32px !important;
   z-index: 32;
   padding: 16px;
   font-size: 14px;
@@ -38,6 +38,12 @@ div.UnderlineNav {
   margin-right: 16px;
 }
 
+@media (min-width: 1280px) {
+  .Theme-switcher {
+    display: none;
+  }
+}
+
 .octicon {
   fill: currentColor;
 }
@@ -45,7 +51,7 @@ div.UnderlineNav {
 .Header-search {
   max-width: 272px;
   width: 100%;
-  transition: .2s ease-in-out;
+  transition: 0.2s ease-in-out;
   transition-property: max-width, padding-bottom, padding-top;
 }
 
@@ -69,7 +75,7 @@ div.UnderlineNav {
 }
 
 .Header-search-label:focus-within {
-  background-color: hsla(0, 0%, 100%, .175);
+  background-color: hsla(0, 0%, 100%, 0.175);
   border-color: var(--color-state-focus-border);
   outline: none;
 }
@@ -121,7 +127,7 @@ div.UnderlineNav {
   user-select: none;
 }
 
-.details-reset>summary {
+.details-reset > summary {
   outline: none;
 }
 
@@ -165,7 +171,8 @@ div.UnderlineNav {
 
 #table-of-contents > nav ul > li {
   margin-left: 1em;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
 #table-of-contents > nav > ul > li {
@@ -174,18 +181,18 @@ div.UnderlineNav {
 
 @media (max-width: 768px) {
   .Header {
-    padding-left: 24px!important;
-    padding-right: 24px!important;
+    padding-left: 24px !important;
+    padding-right: 24px !important;
   }
 }
 
 @media (max-width: 480px) {
   .Header {
-    padding-left: 16px!important;
-    padding-right: 16px!important;
+    padding-left: 16px !important;
+    padding-right: 16px !important;
   }
   .mobile-none {
-    display: none!important;
+    display: none !important;
   }
   .Header-search {
     max-width: 100%;
@@ -194,4 +201,33 @@ div.UnderlineNav {
 
 .pinned-item-desc img {
   max-width: 100%;
+}
+
+.octicon-heart {
+  color: var(--color-sponsors-fg) !important;
+}
+
+.pagination-nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.pagination-nav .pagination-button {
+  display: flex;
+}
+
+.pagination-nav .pagination-button .pagination-link {
+  max-width: 150px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.pagination-nav .pagination-button .pagination-link {
+  color: var(--color-text-primary);
+  text-decoration: underline;
+}
+
+.pagination-nav .pagination-button .pagination-link:hover {
+  color: var(--color-text-link);
 }
