--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,8 +1,5 @@
 {{ define "content" }}
 <div class="application-main">
-  <main>
-    {{ partial "user-profile.html" . }}
-
-    {{ partial "posts.html" .}}
+  <main>{{ partial "user-profile.html" . }} {{ partial "posts.html" .}}</main>
 </div>
 {{end }}
