--- a/layouts/partials/extended_head.html
+++ b/layouts/partials/extended_head.html
@@ -1,57 +1,104 @@
-<meta name="description"
-  content="{{ if .IsHome }}{{ .Site.Params.tagline }}{{ else }}{{ .Summary | plainify }}{{ end }}" />
-<meta name="keywords"
-  content='{{ with .Params.Keywords }}{{ delimit . ", " }}{{ else }}{{ $.Site.Params.Keywords }}{{ end }}' />
+<meta
+  name="description"
+  content="{{ if .IsHome }}{{ .Site.Params.tagline }}{{ else }}{{ .Summary | plainify }}{{ end }}"
+/>
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="{{ .Permalink }}" />
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="{{ if .IsHome }}{{ else }}{{ .Title }} - {{ end }}{{ .Site.Title }}" />
-<meta name="twitter:description"
-  content="{{ if .IsHome }}{{ $.Site.Params.description }}{{ else }}{{ .Summary | plainify }}{{ end }}" />
+<meta
+  name="twitter:title"
+  content="{{ if .IsHome }}{{ else }}{{ .Title }} - {{ end }}{{ .Site.Title }}"
+/>
+<meta
+  name="twitter:description"
+  content="{{ if .IsHome }}{{ $.Site.Params.description }}{{ else }}{{ .Summary | plainify }}{{ end }}"
+/>
 <meta name="twitter:site" content="{{ $.Site.BaseURL }}" />
 <meta name="twitter:creator" content="{{ .Params.Author }}" />
-<meta name="twitter:image"
-  content="{{ if .IsHome }}{{ $.Site.Params.avatar | absURL }}{{ else }}{{ .Params.Cover | absURL }}{{ end }}">
+<meta
+  name="twitter:image"
+  content="{{ if .IsHome }}{{ $.Site.Params.avatar | absURL }}{{ else }}{{ .Params.Cover | absURL }}{{ end }}"
+/>
 
 <!-- OG data -->
-<meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
-<meta property="og:title" content="{{ if .IsHome }}{{ else }}{{ .Title }} - {{ end }}{{ .Site.Title }}">
-<meta property="og:description"
-  content="{{ if .IsHome }}{{ $.Site.Params.description }}{{ else }}{{ .Summary | plainify }}{{ end }}" />
+<meta
+  property="og:type"
+  content="{{ if .IsPage }}article{{ else }}website{{ end }}"
+/>
+<meta
+  property="og:title"
+  content="{{ if .IsHome }}{{ else }}{{ .Title }} - {{ end }}{{ .Site.Title }}"
+/>
+<meta
+  property="og:description"
+  content="{{ if .IsHome }}{{ $.Site.Params.description }}{{ else }}{{ .Summary | plainify }}{{ end }}"
+/>
 <meta property="og:url" content="{{ .Permalink }}" />
 <meta property="og:site_name" content="{{ .Title }}" />
-<meta property="og:image"
-  content="{{ if .IsHome }}{{ $.Site.Params.avatar | absURL }}{{ else }}{{ .Params.Cover | absURL }}{{ end }}">
-<meta property="og:image:width" content="2048">
-<meta property="og:image:height" content="1024">
+<meta
+  property="og:image"
+  content="{{ if .IsHome }}{{ $.Site.Params.avatar | absURL }}{{ else }}{{ .Params.Cover | absURL }}{{ end }}"
+/>
+<meta property="og:image:width" content="2048" />
+<meta property="og:image:height" content="1024" />
 {{ if isset .Params "date" }}
 <meta property="article:published_time" content="{{ time .Date }}" />
 {{ end }}
 
 <!-- RSS -->
 {{ with .OutputFormats.Get "RSS" }}
-<link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
+<link
+  href="{{ .RelPermalink }}"
+  rel="alternate"
+  type="application/rss+xml"
+  title="{{ $.Site.Title }}"
+/>
 {{ end }}
 
 <!-- JSON Feed -->
 {{ with .OutputFormats.Get "json" }}
-<link href="{{ .RelPermalink }}" rel="alternate" type="application/json" title="{{ $.Site.Title }}" />
+<link
+  href="{{ .RelPermalink }}"
+  rel="alternate"
+  type="application/json"
+  title="{{ $.Site.Title }}"
+/>
 {{ end }}
 
 <!-- Google Analytics -->
-{{ if eq (getenv "HUGO_ENV") "production"}}
-{{ with .Site.GoogleAnalytics }}
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
+{{ if eq (getenv "HUGO_ENV") "production"}} {{ with .Site.GoogleAnalytics }}
+<script
+  async
+  src="https://www.googletagmanager.com/gtag/js?id={{ . }}"
+></script>
 <script>
-  if (navigator.doNotTrack !== '1') {
+  if (navigator.doNotTrack !== "1") {
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-    gtag('config', '{{ . }}');
+    gtag("config", "{{ . }}");
   }
 </script>
-{{ end }}
-{{ end }}
+{{ end }} {{ end }}
+
+<!-- Google Tag Manager -->
+{{ if eq (getenv "HUGO_ENV") "production"}}{{ with .Site.Params.GtmId }}
+<script>
+  (function (w, d, s, l, i) {
+    w[l] = w[l] || [];
+    w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+    var f = d.getElementsByTagName(s)[0],
+      j = d.createElement(s),
+      dl = l != "dataLayer" ? "&l=" + l : "";
+    j.defer = true;
+    j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+    f.parentNode.insertBefore(j, f);
+  })(window, document, "script", "dataLayer", "{{ . }}");
+</script>
+{{ end }}{{ end }}
+<!-- End Google Tag Manager -->
