--- a/layouts/partials/gitalk.html
+++ b/layouts/partials/gitalk.html
@@ -9,8 +9,7 @@
 {{ end }}
 <script>
   const gitalk = new Gitalk({
-    clientID: '{{ .Site.Params.Gitalk.clientID }}',
-    clientSecret: '{{ .Site.Params.Gitalk.clientSecret }}',
+    accessToken: '{{ .Site.Params.Gitalk.accessToken }}',
     repo: '{{ .Site.Params.Gitalk.repo }}',
     owner: '{{ .Site.Params.Gitalk.owner }}',
     admin: ['{{ .Site.Params.Gitalk.admin }}'],
