--- a/layouts/partials/overview.html
+++ b/layouts/partials/overview.html
@@ -1,13 +1,10 @@
 {{ define "overview" }}
 {{ $pinned := where .Site.Pages "Params.pin" true }}
-{{ $section := $pinned }}
-{{ $section_title := "Pinned" }}
+{{ $section_pinned := $pinned }}
+{{ $section_title_pinned := "Pinned" }}
+{{ $section := where .Site.RegularPages "Section" "in" (slice "post") }}
+{{ $section_title := "Recent posts" }}
 
-{{ if ne (len $pinned) 0}}
-{{ else }}
-{{ $section = where .Site.RegularPages "Section" "in" (slice "post") }}
-{{ $section_title = "Popular posts" }}
-{{ end }}
 <div>
   <div class="position-relative">
     {{ with .Site.GetPage "/readme"  }}
@@ -35,10 +32,60 @@
     <div class="mt-4">
       <div class="js-pinned-items-reorder-container">
         <h2 class="f4 mb-2 text-normal">
-          {{ $section_title }}
+          {{ $section_title_pinned }}
         </h2>
         <ol class="d-flex flex-wrap list-style-none gutter-condensed mb-4 js-pinned-items-reorder-list">
-          {{ range (first 6 $section) }}
+          {{ range (first 6 $section_pinned) }}
+          <li class="col-12 col-md-6 col-lg-6 mb-3 d-flex flex-content-stretch">
+            <div
+              class="Box pinned-item-list-item d-flex p-3 width-full js-pinned-item-list-item public source reorderable sortable-button-item">
+              <div class="pinned-item-list-item-content">
+                <div class="d-flex width-full flex-items-center position-relative">
+                  <svg class="octicon octicon-repo mr-2 text-gray flex-shrink-0" viewBox="0 0 16 16" version="1.1"
+                    width="16" height="16">
+                    <path fill-rule="evenodd"
+                      d="M2 2.5A2.5 2.5 0 014.5 0h8.75a.75.75 0 01.75.75v12.5a.75.75 0 01-.75.75h-2.5a.75.75 0 110-1.5h1.75v-2h-8a1 1 0 00-.714 1.7.75.75 0 01-1.072 1.05A2.495 2.495 0 012 11.5v-9zm10.5-1V9h-8c-.356 0-.694.074-1 .208V2.5a1 1 0 011-1h8zM5 12.25v3.25a.25.25 0 00.4.2l1.45-1.087a.25.25 0 01.3 0L8.6 15.7a.25.25 0 00.4-.2v-3.25a.25.25 0 00-.25-.25h-3.5a.25.25 0 00-.25.25z">
+                    </path>
+                  </svg>
+                  <a class="text-bold flex-auto min-width-0" href="{{ .Permalink }}">
+                    <span class="repo" title="{{ .Title }}">{{ .Title }}</span>
+                  </a>
+                </div>
+
+
+                <div name="summary" class="pinned-item-desc text-gray text-small d-block mt-2 mb-3">
+                  {{ .Summary | safeHTML }}
+                </div>
+
+                <p class="mb-0 f6 text-gray">
+                  {{ with .Params.tags }}
+                  {{ range $tag := (first 5 .) }}
+                  <a href="{{ relURL (print "/tags/" . | urlize) }}" class="pinned-item-meta muted-link ">
+                    <svg class="octicon octicon-tag" viewBox="0 0 16 16" version="1.1" width="16" height="16">
+                      <path fill-rule="evenodd"
+                        d="M2.5 7.775V2.75a.25.25 0 01.25-.25h5.025a.25.25 0 01.177.073l6.25 6.25a.25.25 0 010 .354l-5.025 5.025a.25.25 0 01-.354 0l-6.25-6.25a.25.25 0 01-.073-.177zm-1.5 0V2.75C1 1.784 1.784 1 2.75 1h5.025c.464 0 .91.184 1.238.513l6.25 6.25a1.75 1.75 0 010 2.474l-5.026 5.026a1.75 1.75 0 01-2.474 0l-6.25-6.25A1.75 1.75 0 011 7.775zM6 5a1 1 0 100 2 1 1 0 000-2z">
+                      </path>
+                    </svg>
+                    {{ $tag }}
+                  </a>
+                  {{ end }}
+                  {{ end }}
+                </p>
+              </div>
+            </div>
+          </li>
+          {{ end }}
+        </ol>
+      </div>
+    </div>
+
+    <div class="mt-4">
+      <div class="js-pinned-items-reorder-container">
+        <h2 class="f4 mb-2 text-normal">
+          {{ $section_title }}
+        </h2>
+        <ol class="d-flex flex-wrap list-style-none gutter-condensed mb-4 js-recent-items-reorder-list">
+          {{ range (first 4 $section) }}
           <li class="col-12 col-md-6 col-lg-6 mb-3 d-flex flex-content-stretch">
             <div
               class="Box pinned-item-list-item d-flex p-3 width-full js-pinned-item-list-item public source reorderable sortable-button-item">
@@ -135,7 +182,9 @@
           Post activity
         </h2>
 
-        <div id="posts-activity">
+        <div id="posts-activity-block">
+          <div id="posts-activity">
+          </div>
         </div>
       </div>
 
