--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -89,6 +89,20 @@
           </div>
         </div>
       </div>
+
+      <div class="pagination-nav">
+        <div class="pagination-button next-post">
+          {{ if .NextPage }}
+          <div>«&nbsp;</div><a class="pagination-link link-reverse" href="{{ .NextPage.Permalink }}"> {{ .NextPage.Title | truncate 50 "..." }}</a>
+          {{ end }}
+        </div>
+        
+        <div class="pagination-button previous-post">
+          {{ if .PrevPage }}
+          <a class="pagination-link link-reverse" href="{{ .PrevPage.Permalink }}">{{ .PrevPage.Title | truncate 50 "..."}}&nbsp;</a><div> »</div>
+          {{ end }}
+        </div>
+      </div>
     </div>
   </main>
 </div>
