--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -3,7 +3,7 @@
 {{ else }}
 <script type="application/javascript" src="{{ "js/github-style.js" | absURL }}"></script>
 <script src="{{ "js/mark.es6.min.js" | absURL }}"></script>
-
+{{end}}
 {{ if and .Site.Params.EnableLocalSearch .Site.Params.Rss }}
 <script type="text/javascript">
 
