--- a/layouts/partials/giscus.html
+++ b/layouts/partials/giscus.html
@@ -1,16 +1,17 @@
-{{ if .Site.Params.enableGircus }}
+{{ if .Site.Params.enableGiscus }}
 <script src="https://giscus.app/client.js"
         data-repo="{{ .Site.Params.Gitalk.repo }}"
-        data-repo-id="[在此输入仓库 ID]"
-        data-category="[在此输入分类名]"
-        data-category-id="[在此输入分类 ID]"
-        data-mapping="pathname"
-        data-strict="0"
+        data-repo-id="{{ .Site.Params.Gitalk.repoid }}"
+        data-category="{{ .Site.Params.Gitalk.category }}"
+        data-category-id="{{ .Site.Params.Gitalk.categoryid }}"
+        data-mapping="{{ .Site.Params.Gitalk.mapping }}"
+        data-strict="1"
         data-reactions-enabled="1"
-        data-emit-metadata="0"
+        data-emit-metadata="1"
         data-input-position="bottom"
         data-theme="preferred_color_scheme"
         data-lang="zh-CN"
+		data-loading="lazy"
         crossorigin="anonymous"
         async>
 </script>
